--- a/src/components/DropDown/DropDown.css
+++ b/src/components/DropDown/DropDown.css
@@ -10,27 +10,33 @@
 .select {
   padding: 10px;
   font-size: 14px;
+  background-color: rgb(0, 96, 152);
+  color: #ffffff;
+  font-weight: bold;
+  border: none;
+  border-radius: 2px;
 }
 .search {
   padding: 10px;
   font-size: 14px;
-  margin-top: 10px;
+  border: none;
+  border-bottom: 1px solid rgb(0 0 0 / 28%);
 }
 .dropdown {
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
-
-  border: 1px solid #898989;
+  box-shadow: 0 0 0 1px rgba(0,0,0,.15), 0 2px 3px rgba(0,0,0,.2);
+  border-radius: 2px;
 }
 .list-item {
   display: flex;
   justify-content: space-between;
-  border-bottom: 1px solid #898989;
+  border-bottom: 1px solid rgb(0 0 0 / 28%);
   padding: 5px 10px;
   cursor: pointer;
 }
-div.list-item:nth-child(even){
+div.list-item:hover{
   background-color: #eeeeee;
 }
 .cell {
@@ -50,4 +56,8 @@ div.list-item:nth-child(even){
 .buttonGroup button{
   padding: 5px 10px;
   margin-left: 10px;
+}
+.loading, .noResult {
+  text-align: center;
+  padding: 10px;
 }
